# raytracer

./: CMakeLists.txt  Camera.hpp  Intersection.hpp  Light.hpp  Material.hpp  Medium.hpp  OBJ_Loader.hpp  Object.hpp  Path_tracing.md  README.md  Ray.hpp  Scene.hpp  Shader.hpp  Sphere.hpp  Triangle.hpp  Utils.hpp  main.cpp  pbrt.hpp
Acceleration/: Aggregate.cpp  Aggregate.hpp  BVHAccel.cpp  BVHAccel.hpp  BVHStruct.hpp  Bounds.cpp  Bounds.hpp  CMakeLists.txt
BxDF/: BssrdfAdaptor.cpp  BssrdfAdaptor.hpp  BxDF.cpp  BxDF.hpp  CMakeLists.txt  Fresnel.cpp  Fresnel.hpp  Lambertain.cpp  Lambertain.hpp  Microfacet.cpp  Microfacet.hpp  MicrofacetDistribution.cpp  MicrofacetDistribution.hpp  MonteCarloSamples.hpp  SpecularBxDF.cpp  SpecularBxDF.hpp  SphericalCoordFuncs.hpp
Camera/: CMakeLists.txt  Camera.cpp  Camera.hpp  Film.cpp  Film.hpp  OrthographicCamera.cpp  OrthographicCamera.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp
Filter/: BoxFilter.cpp  BoxFilter.hpp  CMakeLists.txt  Filter.cpp  Filter.hpp  GaussianFilter.cpp  GaussianFilter.hpp  MitchellFilter.cpp  MitchellFilter.hpp
Integrator/: CMakeLists.txt  DirectLightIntegrator.cpp  DirectLightIntegrator.hpp  Integrator.cpp  Integrator.hpp  PathIntegrator.cpp  PathIntegrator.hpp  SamplerIntegrator.cpp  SamplerIntegrator.hpp
Interaction/: CMakeLists.txt  Interaction.cpp  Interaction.hpp  SurfaceInteraction.cpp  SurfaceInteraction.hpp
Light/: AreaLight.cpp  AreaLight.hpp  CMakeLists.txt  Light.cpp  Light.hpp  Visibility.cpp  Visibility.hpp
Material/: BSDF.cpp  BSDF.hpp  BSSRDF.cpp  BSSRDF.hpp  CMakeLists.txt  Material.cpp  Material.hpp  MatteMaterial.cpp  MatteMaterial.hpp  Metal.cpp  Metal.hpp  PlasticMaterial.cpp  PlasticMaterial.hpp  PlastidMaterial.cpp  SpecularMaterial.cpp  SpecularMaterial.hpp  SubsurfaceMaterial.cpp  SubsurfaceMaterial.hpp
Matrix4_4/: CMakeLists.txt  Matrix4_4.cpp  Matrix4_4.hpp  MatrixFunctions.hpp
Mesh/: CMakeLists.txt  OBJ_Loader.cpp  OBJ_Loader.hpp  TriangleMesh.cpp  TriangleMesh.hpp
Primitive/: CMakeLists.txt  GeometryPrimitive.cpp  GeometryPrimitive.hpp  Primitive.cpp  Primitive.hpp  TransformPrimitive.cpp  TransformPrimitive.hpp
Ray/: CMakeLists.txt  Ray.cpp  Ray.hpp
Sample/: CMakeLists.txt  PixelSampler.cpp  PixelSampler.hpp  Sampler.cpp  Sampler.hpp  StratifiedSampler.cpp  StratifiedSampler.hpp  VNDFSampler.cpp  VNDFSampler.hpp
Scene/: CMakeLists.txt  Scene.cpp  Scene.hpp
Shape/: CMakeLists.txt  Shapes.cpp  Shapes.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp
Spectrum/: CoefficientSpectrum.hpp  SampledSpectrum.hpp
SurfaceInteraction/: Intersection.hpp
TransformMat/: TransformFuntions.hpp  TransformMat.hpp
Utils/: FresnelFunctions.hpp  MatrixFunctions.hpp  MonteCarloSamples.hpp  SphericalCoordFuncs.hpp  Utils.hpp
